feat: [contract] add stage 3 async pipeline
